<resources>
    <string name="app_name">AndroidOneLess4</string>
    <string name="value_a">A:</string>
    <string name="value_b">B:</string>
    <string name="solution">Solution:</string>
    <string name="sum">+</string>
    <string name="difference">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equally">=</string>
    <string name="invait_edit_value_1">Введите число A</string>
    <string name="invait_edit_value_2">Введите число B</string>
</resources>
