<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="10">
        <EditText
            android:id="@+id/etValueA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invait_edit_value_1"/>

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"/>

        <EditText
            android:id="@+id/etValueB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invait_edit_value_2"/>

        <TextView
            android:id="@+id/tvSolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/solution_text_size"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difference"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:layout_weight="1"/>

        </LinearLayout>

    <Button
        android:id="@+id/btnEqually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equally"
        android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>
